--- a/style.css
+++ b/style.css
@@ -78,3 +78,12 @@ main{
     padding: 0 150px;
     box-sizing: border-box;
 }
+
+button{
+    color: rgb(72,72,246) ;
+    font-size: 1.25rem;
+    background: transparent;
+    cursor: pointer;
+    margin: 0 0.5rem;
+    border: none;
+}
